@@ -1,6 +1,7 @@
 9.2.0
 - Added support for .NET 9 and EF Core 9 GA versions (WL16638).
 - Removed support for .NET 6 and EFCore 6 (WL16654).
+- Fixed bug Run inserts in batch command as one block (MySQL Bug #110553, Oracle Bug #35240186). Thanks to Sebastian Schwarzhuber for the contribution.
 
 
 9.1.0
